--- a/app/views/workouts/show.html.haml
+++ b/app/views/workouts/show.html.haml
@@ -4,3 +4,8 @@
   %p= @workout.mood
   %p= @workout.length
   
+= link_to 'Back', root_path
+|
+= link_to 'Edit', edit_workout_path
+|
+= link_to 'Delete', workout_path, method: :delete, data: { confirm: 'Are you sure?' }
