--- a/app/views/workouts/show.html.haml
+++ b/app/views/workouts/show.html.haml
@@ -3,6 +3,13 @@
   %p= @workout.workout
   %p= @workout.mood
   %p= @workout.length
+
+#exercises
+  %h2 Exercises
+  = render @workout.exercises
+
+  %h3 Add Exercise
+  = render 'exercises/form'
   
 = link_to 'Back', root_path
 |
