--- a/app/views/exercises/_exercise.html.haml
+++ b/app/views/exercises/_exercise.html.haml
@@ -1,3 +1,7 @@
-%p= exercise.name
-%p= exercise.reps
-%p= exercise.sets
+.row
+  .col-md-2
+    = exercise.name
+  .col-md-2
+    = exercise.reps
+  .col-md-2
+    = exercise.sets
