--- a/app/views/workouts/new.html.haml
+++ b/app/views/workouts/new.html.haml
@@ -1,5 +1,5 @@
-%h1 New Workout
+.col-md-6.col-md-offset-3
+  %h1 New Workout
+  = render 'form'
 
-= render 'form'
-
-= link_to 'Cancel', root_path
+  = link_to 'Cancel', root_path
